--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <a-box position="-1 1 -3" rotation="45 45 45" color="#41337A"></a-box>
       <a-torus-knot position="0 2.5 -5"radius-inner="1" radius-outer="2" color="#EF798A"></a-torus-knot>
       <a-plane position="0 0 -3.5" rotation="-90 0 0" width="4" height="2" color="#7BC8A4"></a-plane>
-      <a-cylinder position="1 0.75 -3" radius="0.25" height="1" color="#F88"></a-cylinder>
+      <a-cylinder position="1 0.75 -3" radius="0.25" height="1" color="#FBCAEF"></a-cylinder>
       <a-sky color="#99f"></a-sky>
     </a-scene>
 
